Update header formatting on recipe pages and fix spacing issues on homepage and recipe pages

--- a/style.css
+++ b/style.css
@@ -14,15 +14,19 @@
 
 * {
     font-family:"Helvetica",  'Times New Roman', sans-serif;
-     padding: 0;
+    padding: 0;
     margin: 0;
+}
+
+body.recipe-body {
+    gap: 2rem;
 }
 
 body {
     display: flex;
     flex-direction: column;
-    gap: 32px;
     background-color: var(--body-background-color);
+    min-height: 100vh;
 }
 
 ul {
@@ -43,6 +47,7 @@ a {
     justify-content: center;
     background-color: var(--primary-background-color);
     color: var(--alternate-text-color);
+    padding: 1rem;
 }
 
 .menu {
@@ -111,6 +116,7 @@ a {
     justify-content: center;
     background-color: var(--primary-background-color);
     color: var(--alternate-text-color);
+    padding: 1rem;
 }
 
 .main-chunk {
@@ -156,6 +162,7 @@ a {
 
 .directions-container > ol > li {
     width: clamp(40ch, 100%, 75ch);
+    margin-left: 2rem;
 }
 
 .recipe-info {
@@ -188,4 +195,12 @@ a {
     background-color: var(--secondary-background-color);
     border-style:solid;
     border-color:var(--primary-border-color);
+}
+
+.footer {
+    margin-top: auto;
+    text-align: center;
+    background-color: var(--primary-background-color);
+    color: var(--alternate-text-color);
+    padding: 12px;
 }
